# melbourne

./: .gitignore  .gitmodules  Example.xlsx  LICENSE  Melbourne.sln  README  README.md  azure-pipelines.yml  main.go  melbourne.py  pom.xml  pyproject.toml  requirements.txt  scoreboards.py
Melbourne.Contest/: Contest.cs  Entry.cs  Melbourne.Contest.csproj
Melbourne.ContestData/: Contest.cs  Entry.cs  Melbourne.ContestData.csproj
Melbourne.ContestData.Tests/: ContestTests.cs  EntryTests.cs  Melbourne.ContestData.Tests.csproj
Melbourne.ContestTests/: ContestTests.cs  Melbourne.ContestTests.csproj
Resources/: countries.json
cli/src/main/java/org/iune/melbourne/: App.java
contest/: contest.go
entry/: entry.go
gui/: pom.xml
melbourne/api/: api.py  utilities.py
melbourne/contest/: contest.py  entry.py
melbourne/scoreboard/: generator.py  utilities.py
python/: requirements.txt
python/resources/: 1988.xlsx
python/src/main/python/contest/: contest.py
python/src/main/python/gui/: window.py
python/src/main/python/scoreboard/: utilities.py
resources/: 1988.xlsx
scoreboard/: scoreboard.go
src/main/java/org/iune/melbourne/: App.java  Launcher.java  Loader.java  Melbourne.java
src/main/python/: main.py
src/main/python/contest/: contest.py  entry.py
src/main/python/gui/: thread.py  window.py
src/main/python/scoreboard/: scoreboard.py  utilities.py
src/main/resources/icons/: Icon.icns
src/test/java/org/iune/melbourne/: AppTest.java  LoaderTest.java  MelbourneTest.java
src/test/resources/: 189-1252.csv  189-UTF-8.csv  215.xlsx
(+18 files in other folders)
