[tool.poetry]
name = "melbourne"
version = "6.0.0"
description = "Scoreboard image generator"
authors = ["Aditya Duri <aditya.duri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
simple-settings = "^1.2.0"
xlrd = "1.2.0"
python-multipart = "^0.0.6"
PySide6 = "^6.3.1"
webcolors = "^1.12"
pathvalidate = "^3.2.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

